duck/test/fail/void-case.duck
case 1 + 'c' of
  _ -> 3
